# staticPlanning2D

./: .gitmodules  CMakeLists.txt  README.md
include/algos/: grid_2d_solver.h
include/nodes/: node2d.h
output/: visualize.py
src/: CMakeLists.txt  grid_2d_solver.cpp  node2d.cpp  pbPlots.cpp  supportLib.cpp
test/: generate_path.cpp  generate_path_experiment.cpp  generate_path_weighted.cpp  nlopt_practice.cpp
